sf-ai-orchestrator/force-app/main/default/objects/AI_Provider__mdt/AI_Provider__mdt.object-meta.xml
<CustomObject>
    <description>Custom Metadata Type that defines AI provider configuration. API tokens are stored exclusively in Named Credentials — never in this record.</description>
    <label>AI Provider</label>
    <pluralLabel>AI Providers</pluralLabel>
</CustomObject>