sf-ai-orchestrator/force-app/main/default/objects/AI_Provider__mdt/fields/API_Version__c.field-meta.xml
<CustomField>
    <fullName>API_Version__c</fullName>
    <description>API version header value (used by Azure OpenAI: 2024-02-01)</description>
    <label>API Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>