sf-ai-orchestrator/force-app/main/default/objects/AI_Provider__mdt/fields/Custom_Headers_JSON__c.field-meta.xml
<CustomField>
    <fullName>Custom_Headers_JSON__c</fullName>
    <description>Additional HTTP headers as JSON object. Do NOT include auth headers here — use Named Credentials.</description>
    <label>Custom Headers (JSON)</label>
    <type>TextArea</type>
</CustomField>