sf-ai-orchestrator/force-app/main/default/objects/AI_Provider__mdt/fields/Default_Model__c.field-meta.xml
<CustomField>
    <fullName>Default_Model__c</fullName>
    <description>Default model identifier (e.g. gpt-4o, claude-sonnet-4-6)</description>
    <label>Default Model</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>