sf-ai-orchestrator/force-app/main/default/objects/AI_Provider__mdt/fields/Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_URL__c</fullName>
    <description>Base API endpoint for this provider (e.g. https://api.openai.com/v1)</description>
    <label>Endpoint URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>