sf-ai-orchestrator/force-app/main/default/objects/AI_Provider__mdt/fields/Max_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Max_Tokens__c</fullName>
    <defaultValue>4096</defaultValue>
    <label>Max Tokens</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>