sf-ai-orchestrator/force-app/main/default/objects/AI_Provider__mdt/fields/Named_Credential_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential_API_Name__c</fullName>
    <description>API name of the Named Credential that holds the auth token. NEVER store tokens here.</description>
    <label>Named Credential API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>