sf-ai-orchestrator/force-app/main/default/objects/AI_Provider__mdt/fields/Provider_Type__c.field-meta.xml
<CustomField>
    <fullName>Provider_Type__c</fullName>
    <description>Adapter key: OPENAI | ANTHROPIC | GOOGLE | AZURE_OPENAI | COHERE | MISTRAL | CUSTOM</description>
    <label>Provider Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>