sf-ai-orchestrator/force-app/main/default/objects/AI_Provider__mdt/fields/Rate_Limit_RPM__c.field-meta.xml
<CustomField>
    <fullName>Rate_Limit_RPM__c</fullName>
    <defaultValue>60</defaultValue>
    <label>Rate Limit (Requests/Min)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>