sf-ai-orchestrator/force-app/main/default/objects/AI_Provider__mdt/fields/Rate_Limit_TPM__c.field-meta.xml
<CustomField>
    <fullName>Rate_Limit_TPM__c</fullName>
    <label>Rate Limit (Tokens/Min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>