sf-ai-orchestrator/force-app/main/default/objects/AI_Provider__mdt/fields/Supports_Streaming__c.field-meta.xml
<CustomField>
    <fullName>Supports_Streaming__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supports Streaming</label>
    <type>Checkbox</type>
</CustomField>