sf-ai-orchestrator/force-app/main/default/objects/AI_Provider__mdt/fields/Timeout_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Timeout_Seconds__c</fullName>
    <defaultValue>120</defaultValue>
    <label>Timeout (Seconds)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>